[FIX] web: calendar popover style
This commit fixes some problems in the calendar view:
* event's style in the popover
* the scroll when the popover is at the bottom of the view
* the inner style of the popover to be able to scroll if too tall

Steps to reproduce:
* Open the Planning App
* Go on the month view if not already in
* Click on the "+X more" link
 => BUG the style and  the popover can't be scroll.

task-3833629

--- a/addons/web/static/src/views/calendar/calendar_renderer.scss
+++ b/addons/web/static/src/views/calendar/calendar_renderer.scss
@@ -159,14 +159,14 @@
         }
 
         .fc-more-popover {
-            .fc-header {
+            .fc-popover-header {
                 padding-left: 1rem;
-                .fc-title {
+                .fc-popover-title {
                     font-weight: bold;
                 }
             }
 
-            .fc-body {
+            .fc-popover-body {
                 max-height: 500px;
                 overflow: auto;
             }
@@ -627,7 +627,7 @@
     $color: nth($o-colors-complete, $i);
     $color-subtle: mix($o-white, $color, 55%);
 
-    .o_calendar_renderer .fc-view {
+    .o_calendar_renderer {
         .o_calendar_color_#{$i - 1} {
             --fc-event-bg-color: #{$color-subtle};
             --o-event-bg: #{$color};
